# eonn

./: .gitignore  Cargo.toml  README.md
benches/: bench_heap.rs  bench_rp_forest.rs  utils.rs
eonn-accel/: Cargo.toml  README.md
eonn-accel/asm-view/: Cargo.toml
eonn-accel/asm-view/src/: lib.rs
eonn-accel/benches/: bench_3rd_parties.rs  bench_cosine.rs  bench_distance_measures.rs  bench_dot_product.rs  bench_euclidean.rs  bench_hyperplane_angular.rs  bench_hyperplane_euclidean.rs  bench_metrics.rs  utils.rs
eonn-accel/src/: arch.rs  dims.rs  f32_ops.rs  lib.rs  ops.rs  test_ops.rs  test_utils.rs  vector.rs
eonn-accel/src/danger/: avx2_angular_hyperplane.rs  avx2_cosine.rs  avx2_dot_product.rs  avx2_euclidean.rs  avx2_euclidean_hyperplane.rs  avx2_norm.rs  avx2_vector_x_value.rs  avx512_angular_hyperplane.rs  avx512_cosine.rs  avx512_dot_product.rs  avx512_euclidean.rs  avx512_euclidean_hyperplane.rs  avx512_norm.rs  avx512_vector_x_value.rs  f32_avx2_angular_hyperplane.rs  f32_avx2_cosine.rs  f32_avx2_dot_product.rs  f32_avx2_euclidean.rs  f32_avx2_euclidean_hyperplane.rs  f32_avx2_max.rs  f32_avx2_min.rs  f32_avx2_norm.rs  f32_avx2_sum.rs  f32_avx2_vector_x_value.rs  f32_avx2_vector_x_vector.rs  f32_avx512_angular_hyperplane.rs  f32_avx512_cosine.rs  f32_avx512_dot_product.rs  f32_avx512_euclidean.rs  f32_avx512_euclidean_hyperplane.rs  f32_avx512_max.rs  f32_avx512_min.rs  f32_avx512_norm.rs  f32_avx512_sum.rs  f32_avx512_vector_x_value.rs  f32_avx512_vector_x_vector.rs  f32_fallback_angular_hyperplane.rs  f32_fallback_cosine.rs  f32_fallback_dot_product.rs  f32_fallback_euclidean.rs  (+16 more)
eonn-accel/src/math/: default.rs  fast_math.rs  mod.rs
eonn-accel/src/ops/: f32_auto_size.rs  f32_fixed_size.rs  mod.rs
eonn-demo/: Cargo.toml
eonn-demo/scripts/: fetch.py  test_pynndescent_times.py  test_usearch_times.py
eonn-demo/src/: main.rs
eonn-pq/: Cargo.toml
eonn-pq/scripts/: test_faiss.py
eonn-pq/src/: lib.rs  quant.rs
igris-accel/: Cargo.toml  README.md  build.rs
igris-accel/asm-view/: Cargo.toml
igris-accel/asm-view/src/: lib.rs
igris-accel/benches/: bench_bruteforce_index.rs  bench_cosine.rs  bench_dot_product.rs  bench_euclidean.rs  bench_hyperplane_angular.rs  bench_hyperplane_euclidean.rs  utils.rs
igris-accel/fortran/: cosine.f95  dot_product.f95
igris-accel/src/: bindings.rs  dims.rs  lib.rs  ops.rs  types.rs  vector.rs
igris-accel/src/danger/: avx2_angular_hyperplane.rs  avx2_cosine.rs  avx2_dot_product.rs  avx2_euclidean.rs  avx2_euclidean_hyperplane.rs  avx2_norm.rs  avx512_angular_hyperplane.rs  avx512_cosine.rs  avx512_dot_product.rs  avx512_euclidean.rs  avx512_euclidean_hyperplane.rs  avx512_norm.rs  fallback_angular_hyperplane.rs  fallback_cosine.rs  fallback_dot_product.rs  fallback_euclidean.rs  fallback_euclidean_hyperplane.rs  mod.rs  test_utils.rs  utils.rs
igris-accel/src/distance_ops/: mod.rs
igris-accel/src/distance_ops/float32/: avx2.rs  fallback.rs  mod.rs
igris-accel/src/math/: default.rs  fast_math.rs  mod.rs
igris-accel/src/vector_ops/: arch.rs  dims.rs  float32.rs  mod.rs
igris-accel/src/vector_ops/float32/: avx2.rs  fallback.rs  mod.rs
igris-spacial/: Cargo.toml  README.md
igris-spacial/src/: lib.rs  rp_tree.rs
igris-spacial/tools/: build_dataset.py
rann-accel/: Cargo.toml  README.md
rann-accel/asm-view/: Cargo.toml
rann-accel/asm-view/src/: lib.rs
rann-accel/benches/: bench_cosine.rs  bench_euclidean.rs  bench_hyperplane_angular.rs  utils.rs
rann-accel/src/: arch.rs  lib.rs  ops.rs  vector.rs
rann-accel/src/danger/: avx2_angular_hyperplane.rs  avx2_cosine.rs  avx2_dot_product.rs  avx2_euclidean.rs  avx2_euclidean_hyperplane.rs  avx2_norm.rs  avx512_angular_hyperplane.rs  avx512_dot_product.rs  avx512_euclidean_hyperplane.rs  avx512_norm.rs  fallback_angular_hyperplane.rs  fallback_euclidean.rs  fallback_euclidean_hyperplane.rs
rann-demo/: Cargo.toml
rann-demo/scripts/: prep.py  prep_minst_784.py  test_pynndescent_times.py
rann-demo/src/: main.rs
rann-pq/scripts/: preview_embeddings.py
src/: graph.rs  lib.rs  metric.rs  nndescent.rs  rp_trees.rs
