[package]
name = "igris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev.package.igris-accel]
opt-level = 3

[profile.release]
lto = "fat"

[workspace]
members = [
    "igris-accel",
    "igris-spacial",
]
