[package]
name = "rann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev.package.igris-accel]
opt-level = 3

[workspace]
members = [
    "rann-accel",

    # Used for profiling and debugging
    "rann-accel/asm-view",
]
