[package]
name = "eonn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.2"
tracing = "0.1.40"
bitvec = "1.0.1"
smallvec = "1.13.2"
fnv = "1.0.7"

eonn-accel = { version = "0.1.0", path = "eonn-accel" }

rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
mimalloc = { version = "0.1.39", default-features = false }

[features]
# Enables rayon for parrallel graph building
rayon = ["dep:rayon"]

[[bench]]
name = "bench_heap"
harness = false

[[bench]]
name = "bench_rp_forest"
harness = false

[profile.dev.package.eonn-accel]
opt-level = 3

[workspace]
members = [
    "eonn-accel",
    "eonn-pq",

    # Used for profiling and debugging
    "eonn-demo",
    "eonn-accel/asm-view",
]
