[package]
name = "eonn-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
safetensors = "0.4.2"
bytemuck = "1.15.0"
rayon = "1.10.0"

eonn-accel = { version = "0.1.0", path = "../eonn-accel" }
eonn = { version = "0.1.0", path = "..", features = ["rayon"] }
mimalloc = { version = "0.1.39", default-features = false }