[package]
name = "igris-accel"
version = "0.1.0"
edition = "2021"
description = "Accelerated operations for the igris service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
simsimd = "4.2.2"
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_dot_product"
harness = false

[[bench]]
name = "bench_cosine"
harness = false

[[bench]]
name = "bench_euclidean"
harness = false
